--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+#root {
+  background: linear-gradient(to bottom, rgb(43,50,178) 0%, rgb(20,136,204) 100%);
+  color: white;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +12,3 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
